--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,9 @@ baseURL = '/'
 languageCode = 'en-us'
 theme = "etch"
 
+
+ignoreFiles = ["/1/*", "/2/*", "3/*"]
+
 [languages]
     [languages.en]
     title = ""
