--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = 'en-us'
 theme = "etch"
 
 
-ignoreFiles = ["content/1/*", "content/2/*", "content/3/*"]
+ignoreFiles = ["content/1/*", "content/2/*", "content/3/*", "content/5/4"]
 
 [languages]
     [languages.en]
